--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^18.8.0",
+    "@types/react": "^18.0.21",
+    "@types/typescript": "^2.0.0",
     "fork-me-corner": "^1.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "eslint": "8.24.0",
